feat: cleanup styling and date format

--- a/articles.html
+++ b/articles.html
@@ -6,7 +6,7 @@ title: Blog
 <div class="blog-container">
   <header class="blog-header">
     <h1>Blog</h1>
-    <p class="blog-description">Technical articles about photography, web development, and running.</p>
+    <p class="blog-description">Articles about software engineering, photography and running</p>
   </header>
 
   <div class="blog-list">
