--- a/wantlist.html
+++ b/wantlist.html
@@ -5,7 +5,7 @@ title: Wantlist
 
 <div class="wantlist-container">
   <header class="wantlist-header">
-    <h1>Vinyl Wantlist</h1>
+    <h1>Vinyl wantlist</h1>
     <p class="wantlist-description">Records I'm hunting for on Discogs</p>
   </header>
 
